--- a/filtros.css
+++ b/filtros.css
@@ -4,19 +4,57 @@ body {
     color: #ffffff;
   }
   
-  img {
-    width: 33%;
-    height: auto;
-    max-width: 235px;
+div{
+  display: flex;
+  justify-content: center;
+}
+
+img {
+  width: 33%;
+  max-width: 235px;
   }
+
+@font-face {
+      font-family: 'Bronkey';
+      src: url('BronkeyPERSONALUSEONLY-Regular.otf') format('opentype');
+      font-weight: 700;
+      font-style: normal;
+}
+
+h1{
+  font-family: 'Bronkey';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 48px;
+  color: white;
+  text-align: center  ;
+}
+
+@font-face {
+  font-family: 'Bronkey';
+  src: url('BronkeyPERSONALUSEONLY-Regular.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+h2{
+font-family: 'Bronkey';
+font-style: normal;
+font-weight: 700;
+font-size: 30px;
+line-height: 48px;
+color: white;
+text-align: center  ;
+}
   
-  .blur {filter: blur(4px);}
-  .brightness {filter: brightness(250%);}
-  .contrast {filter: contrast(180%);}
-  .grayscale {filter: grayscale(100%);}
-  .huerotate {filter: hue-rotate(180deg);}
-  .invert {filter: invert(100%);}
-  .opacity {filter: opacity(50%);}
-  .saturate {filter: saturate(7);}
-  .sepia {filter: sepia(100%);}
-  .shadow {filter: drop-shadow(8px 8px 10px green);}
+.blur {filter: blur(4px);}
+.brightness {filter: brightness(250%);}
+.contrast {filter: contrast(180%);}
+.grayscale {filter: grayscale(100%);}
+.huerotate {filter: hue-rotate(180deg);}
+.invert {filter: invert(100%);}
+.opacity {filter: opacity(50%);}
+.saturate {filter: saturate(7);}
+.sepia {filter: sepia(100%);}
+.shadow {filter: drop-shadow(8px 8px 10px green);}
